--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -84,9 +84,8 @@
         <div class="list">
           <div class="row item item-divider">
             <div class="col col-50 title-components"><b>Componentes</b></div>
-            <div class="col"></div>
-            <div class="col">
-              <a ui-sref="app.components" class="button button-small button-dark">Ver todos</a>
+            <div class="col col-50">
+              <a ui-sref="app.components" class="button-dash button button-small button-dark">Ver todos</a>
             </div>
           </div>
           <div class="item" ng-repeat="component in components_server | limitTo:quantity">
@@ -96,9 +95,8 @@
           </div>
           <div class="row item item-divider">
             <div class="col col-50 title-components"><b>Estadisticas</b></div>
-            <div class="col"></div>
-            <div class="col">
-              <a ui-sref="app.statistics" class="button button-small button-dark">Ver estadisticas</a>
+            <div class="col col-50">
+              <a ui-sref="app.statistics" class="button-dash button button-small button-dark">Ver estadisticas</a>
             </div>
           </div>
         </div>
