--- a/ionic-mobile/elektron/www/templates/monitor.html
+++ b/ionic-mobile/elektron/www/templates/monitor.html
@@ -29,11 +29,11 @@
       <div class="card" ng-repeat="component in components_server_enabled">
           <div class="item item-divider item-icon-right">
             Componente: <b>{{component.label}}</b>
-            <i ng-if="line[component.device_mac].status == true" class="icon ion-toggle-filled balanced"></i>
-            <i ng-if="line[component.device_mac].status == false" class="icon ion-toggle assertive"></i>
+            <i ng-if="components_charts[component.device_mac].status == true" class="monitor-icon icon ion-link balanced"></i>
+            <i ng-if="components_charts[component.device_mac].status == false" class="monitor-icon icon ion-link assertive"></i>
           </div>
           <div class="item item-text-wrap">
-            <canvas id="component.device_mac" class="chart chart-line" chart-data="line[component.device_mac].data" chart-labels="line[component.device_mac].labels"
+            <canvas id="{{component.device_mac}}" class="chart chart-line" chart-data="line[component.device_mac].data" chart-labels="line[component.device_mac].labels"
             chart-series="line[component.device_mac].series"></canvas>
           </div>
       </div>
