--- a/web/elektron/views/monitor.html
+++ b/web/elektron/views/monitor.html
@@ -37,8 +37,8 @@
             <panel panel-class="panel-default no-padding" heading="{{ component.label }}">
                 <panel-controls>
                     <panel-control-collapse></panel-control-collapse>
-                    <i ng-show="components_charts[component.device_mac].status == true" class="glyphicon text-success glyphicon-ok"></i></button>
-                    <i ng-show="components_charts[component.device_mac].status == false" class="glyphicon text-danger glyphicon-remove"></i></button>
+                    <i ng-show="components_charts[component.device_mac].status == true" class="glyphicon text-success glyphicon-link"></i></button>
+                    <i ng-show="components_charts[component.device_mac].status == false" class="glyphicon text-danger glyphicon-link"></i></button>
                 </panel-controls>
                 <div class="p20">
                     <div class="row">
