--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -64,7 +64,7 @@
                         <div class="text-center">Componente seleccionado</div>
                     </div>
                     <div class="boxes-body">
-                        <div class="boxes-history-component text-center">{{selectedComponent.label || 'Todos'}}</div>
+                        <div class="boxes-history-component text-center">{{selectedComponent.label || 'No se seleccionó'}}</div>
                     </div>
                   </a>
               </div>
@@ -115,7 +115,7 @@
           </div>
         </div>
 
-        <div class="col-md-12 animated-content">
+        <div ng-show="(historyerror == false)" class="col-md-12 animated-content">
           <panel panel-class="panel-default no-padding" heading="Configurar periodo de datos historicos">
               <panel-controls>
                   <panel-control-collapse></panel-control-collapse>
@@ -238,11 +238,17 @@
           </panel>
         </div>
 
-        <div ng-show="selectedperiod == false" class="history-footer-container">
+        <div ng-show="(selectedperiod == false) && (historyerror == false)" class="history-footer-container">
           <span>Ingrese el período deseado para observar el consumo </span>
           <span class="glyphicon glyphicon-circle-arrow-up"></span>
         </div>
 
+        <div ng-show="(historyerror == true)" class="error-container">
+          <span> {{historyerrormessage}} </span>
+          <button ng-click="reloadpage()" class="error-button btn btn-sm btn-default">
+            <span class="glyphicon glyphicon-refresh"></span>
+          </button>
+        </div>
 
     </div>
 </div>
