--- a/ionic-mobile/elektron/www/templates/tasks.html
+++ b/ionic-mobile/elektron/www/templates/tasks.html
@@ -2,17 +2,17 @@
   <ion-content>
     <div class="item">
       <div class="button-bar task-font">
-        <a class="button button-dark" ng-show="porconsumo == true">Listar por consumo</a>
-        <a class="button" ng-show="porconsumo == false" ng-click="changeToConsume()">Listar por consumo</a>
-        <a class="button" ng-show="porconsumo == true" ng-click="changeToDate()">Listar por fecha y hora</a>
-        <a class="button button-dark" ng-show="porconsumo == false">Listar por fecha y hora</a>
+        <a class="button button-dark" ng-show="porconsumo == true">Por consumo</a>
+        <a class="button" ng-show="porconsumo == false" ng-click="changeToConsume()">Por consumo</a>
+        <a class="button" ng-show="porconsumo == true" ng-click="changeToDate()">Por fecha y hora</a>
+        <a class="button button-dark" ng-show="porconsumo == false">Por fecha y hora</a>
       </div>
     </div>
     <!-- Por Consumo -->
     <div ng-show="porconsumo == true">
       <div class="item">
         <div class="button-bar">
-          <a ui-sref="app.datatask" class="button button-stable ion-plus-circled">
+          <a ui-sref="app.datatask" class="badge-letter-9 button button-stable ion-plus-circled">
             Agregar nueva tarea por consumo
           </a>
         </div>
@@ -48,10 +48,16 @@
               </span>
               <b>{{task.data_value}}</b>
               </span>
-              <span class="badge badge-light badge-letter-9">Repeticiones: {{task.repeats}}</span>
+              <span class="badge badge-light badge-letter-9">
+                Repeticiones: {{task.repeats}}
+              </span>
             </div>
             <div class="item">
-              <span class="badge-letter"><b>Última ejecución:</b> {{task.last_run | date: "shortDate"}} ({{task.last_run | date: "shortTime"}})</span>
+              <span class="badge-letter">
+                <b>Última ejecución:</b> <br>
+                {{task.last_run | date: "shortDate"}} ({{task.last_run | date: "shortTime"}})
+              </span>
+
               <a ng-click="deleteTask(task.id,'datatasks')" class="task-float-right task-float-right-first button button-small button-assertive">
                 <i class="icon ion-trash-b"></i>
               </a>
@@ -67,7 +73,7 @@
     <div ng-show="porconsumo == false">
       <div class="item">
         <div class="button-bar">
-          <a ui-sref="app.datetimetask" class="button button-stable ion-plus-circled">
+          <a ui-sref="app.datetimetask" class="badge-letter-9 button button-stable ion-plus-circled">
             Agregar nueva tarea por fecha
           </a>
         </div>
@@ -86,15 +92,15 @@
                 <span ng-show="task.taskstate.name == 'ready'" class="badge badge-balanced badge-letter">Lista</span>
             </div>
             <div class="item">
-              <span class="badge-letter">Componente: {{task.device.label}}</span>
+              <span class="badge-letter"><b>Componente:</b> {{task.device.label}}</span>
               <span ng-show="task.taskfunction.name == 'turnon'" class="badge badge-light badge-letter">Tarea: Encender</span>
               <span ng-show="task.taskfunction.name == 'shutdown'" class="badge badge-light badge-letter">Tarea: Apagar</span>
             </div>
             <div class="item ">
-              <span class="badge-letter"><b>Dia:</b> {{task.datetime | date: "shortDate"}}</span>
+              <span class="badge-letter"><b>Dia:</b> {{task.datetime | date: "shortDate"}}</span> <br>
               <span class="badge-letter"><b>Hora:</b> {{task.datetime | date: "shortTime"}}</span>
-              <span ng-show="task.repeat_criteria == '0'" class="badge badge-light badge-letter">Criterio: Hora</span>
-              <span ng-show="task.repeat_criteria == '1'" class="badge badge-light badge-letter">Criterio: Dia</span>
+              <span ng-show="task.repeat_criteria == '0'" class="badge badge-light badge-letter">Criterio: Por hora</span>
+              <span ng-show="task.repeat_criteria == '1'" class="badge badge-light badge-letter">Criterio: Por día</span>
             </div>
             <div class="item">
               <span class="badge-letter"><b>Repeticiones:</b> {{task.repeats}}</span>
