--- a/ionic-mobile/elektron/www/templates/logout.html
+++ b/ionic-mobile/elektron/www/templates/logout.html
@@ -6,8 +6,8 @@
 	  <div class="col">
 			<div class="app-logo"><img class="logo-img" src="img/elektron.png"></div>
       <div class="logout-spinner">
-        <div class="logout-spinner-text">Saliendo</div>
         <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
+        <div class="logout-spinner-text">Cerrando sesión</div>
       </div>
 	  </div>
   </div>
