--- a/web/elektron/views/logout.html
+++ b/web/elektron/views/logout.html
@@ -1,3 +1,10 @@
 <div class="verticalcenter" ng-controller="LogoutController">
 
+  <div class="spinner-container-cerrandosesion">
+    <div class="loader-spinner"></div>
+  </div>
+  <div class="cerrandosession-container">
+    <span>Cerrando sesión</span>
+  </div>
+
  </div>
