--- a/web/elektron/views/index.html
+++ b/web/elektron/views/index.html
@@ -3,11 +3,8 @@
         <li><a href="#/">Inicio</a></li>
         <li class="active">Dashboard</li>
     </ol>
-
-    <h1>Elektron - control de consumo eléctico libre</h1>
-
+    <h1>Elektron - control de consumo eléctrico libre</h1>
 </div>
-
 
 <div class="container-fluid" ng-controller="DashboardController">
 
