--- a/ionic-mobile/elektron/www/templates/components.html
+++ b/ionic-mobile/elektron/www/templates/components.html
@@ -4,12 +4,14 @@
       <div class="item item-divider">
           Componentes
       </div>
-      <div ng-show="(spinner == false) && (componentserror == false)" class="list list-components">
-          <div class="item item-button-right" ng-repeat="component in components_server">
-            <span><b>{{component.label}}</b> <span class="mac-components">({{component.device_mac}})</span>
+      <div ng-show="(spinner == false) && (componentserror == false)" class="list list-components ">
+          <div class="list-components-div item item-button-right" ng-repeat="component in components_server">
+            <div>
+              <b>{{component.label}}</b><br>
+              <span class="mac-components">({{component.device_mac}})</span>
               <span ng-if="component.devicestate.name == 'on'" class="badge-component badge badge-balanced"><i class="icon ion-power"></i></span>
               <span ng-if="component.devicestate.name == 'off'" class="badge-component badge badge-assertive"><i class="icon ion-power"></i></span>
-            </span>
+            </div>
             <a ui-sref="app.component({ componentId: {{component.id}} })" class="button button-dark">
               <i class="icon ion-chevron-right"></i>
             </a>
