--- a/ionic-mobile/elektron/www/templates/dashboard.html
+++ b/ionic-mobile/elektron/www/templates/dashboard.html
@@ -33,7 +33,7 @@
               </select>
             </label>
           </div>
-          <div class="item item-text-wrap">
+          <div class="graphic-item item-text-wrap">
             <div ng-show="(spinner == true) && (dasherror == false)" class="center-spinner">
               <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
             </div>
