--- a/ionic-mobile/elektron/www/templates/graphic-history.html
+++ b/ionic-mobile/elektron/www/templates/graphic-history.html
@@ -9,20 +9,20 @@
             <ion-spinner title="Cargando conexion en tiempo real" class="spinner-header spinner-dash spinner-balanced" ng-show="showiconloading == true" icon="spiral"></ion-spinner>
           </div>
       </div>
-      <div class="item item-text-wrap">
+      <div class="graphic-item item-text-wrap">
         <div ng-show="spinner == true" class="center-spinner">
           <ion-spinner icon="android" class="spinner-dark"></ion-spinner>
         </div>
         <canvas ng-show="spinner == false" id="line" class="chart chart-line" chart-data="line.data" chart-labels="line.labels" chart-series="line.series" chart-options="options" chart-dataset-override="datasetOverride" chart-click="onClick"></canvas>
       </div>
-      <div class="button-bar bar-dark">
-        <a ng-disabled="lastbutton" ng-click="loadPage('last')" class="button button-small icon-left ion-chevron-left"></a>
-        <a ng-disabled="previousbutton" ng-click="loadPage(current_page + 1)" class="button button-small icon-left ion-chevron-left">10</a>
+      <div class="button-bar-history button-bar bar-dark">
+        <a ng-disabled="lastbutton" ng-click="loadPage('last')" class="button-bar-history-a1 button button-small icon-left ion-chevron-left"></a>
+        <a ng-disabled="previousbutton" ng-click="loadPage(current_page + 1)" class="button-bar-history-a2 button button-small icon-left ion-chevron-left">10</a>
         <select class="button button-small" ng-model="current_page" ng-change="loadPage(current_page)"
                 ng-options="page for page in number_pages" >
         </select>
-        <a ng-disabled="nextbutton" ng-click="loadPage(current_page - 1)" class="button button-small icon-right ion-chevron-right">10</a>
-        <a ng-disabled="indexbutton" ng-click="loadPage(1)" class="button button-small icon-right ion-chevron-right"></a>
+        <a ng-disabled="nextbutton" ng-click="loadPage(current_page - 1)" class="button-bar-history-a3 button button-small icon-right ion-chevron-right">10</a>
+        <a ng-disabled="indexbutton" ng-click="loadPage(1)" class="button-bar-history-a4 button button-small icon-right ion-chevron-right"></a>
       </div>
       <div class="item item-divider">
         <span>Detalles:</span>
