--- a/ionic-mobile/elektron/www/templates/statistics.html
+++ b/ionic-mobile/elektron/www/templates/statistics.html
@@ -130,14 +130,14 @@
               chart-data="bardata" chart-labels="barlabels" chart-series="barseries">
             </canvas>
           </div>
-          <div ng-show="barselected == true" class="button-bar bar-calm">
-            <a ng-disabled="lastbutton" ng-click="loadPage('last')" class="button button-small icon-left ion-chevron-left"></a>
-            <a ng-disabled="previousbutton" ng-click="loadPage(current_page + 1)" class="button button-small icon-left ion-chevron-left">5</a>
+          <div ng-show="barselected == true" class="button-bar-history button-bar bar-calm">
+            <a ng-disabled="lastbutton" ng-click="loadPage('last')" class="button-bar-history-a1 button button-small icon-left ion-chevron-left"></a>
+            <a ng-disabled="previousbutton" ng-click="loadPage(current_page + 1)" class="button-bar-history-a2 button button-small icon-left ion-chevron-left">5</a>
             <select class="button button-small" ng-model="current_page" ng-change="loadPage(current_page)"
                     ng-options="page for page in number_pages" >
             </select>
-            <a ng-disabled="nextbutton" ng-click="loadPage(current_page - 1)" class="button button-small icon-right ion-chevron-right">5</a>
-            <a ng-disabled="indexbutton" ng-click="loadPage(1)" class="button button-small icon-right ion-chevron-right"></a>
+            <a ng-disabled="nextbutton" ng-click="loadPage(current_page - 1)" class="button-bar-history-a3 button button-small icon-right ion-chevron-right">5</a>
+            <a ng-disabled="indexbutton" ng-click="loadPage(1)" class="button-bar-history-a4 button button-small icon-right ion-chevron-right"></a>
           </div>
         </div>
       </div>
