--- a/ionic-mobile/elektron/www/templates/datetimetask.html
+++ b/ionic-mobile/elektron/www/templates/datetimetask.html
@@ -57,8 +57,8 @@
             Accion
           </div>
           <select ng-model="task.function">
-            <option ng-selected="task.function == 1" value="1" >Apagar</option>
-            <option ng-selected="task.function == 2" value="2" >Encender</option>
+            <option ng-selected="task.function == 'shutdown'" value="shutdown" >Apagar</option>
+            <option ng-selected="task.function == 'turnon'" value="turnon" >Encender</option>
           </select>
         </label>
         <label class="item item-input item-select tasks-select">
