--- a/web/elektron/views/history.html
+++ b/web/elektron/views/history.html
@@ -95,7 +95,7 @@
               <div class="col-xs-6">
                 <a class="boxes-a boxes-orange" >
                   <div class="boxes-title">
-                      <div class="text-center">Cantidad de datos sensados</div>
+                      <div class="text-center">Cantidad de datos</div>
                   </div>
                   <div class="boxes-body">
                       <div class="text-center">{{total_data || 0}}</div>
