--- a/web/elektron/views/statistics.html
+++ b/web/elektron/views/statistics.html
@@ -145,7 +145,7 @@
     </div>
     <div class="col-md-6">
 
-        <panel panel-class="panel-default no-padding" heading="Tabla">
+        <panel panel-class="panel-default no-padding" heading="">
             <panel-controls>
                 <panel-control-collapse></panel-control-collapse>
 
